--- a/styles/error.css
+++ b/styles/error.css
@@ -10,6 +10,8 @@
 .error__title {
   color: #fff;
   font-family: Oswald, sans-serif;
+  font-weight: 400;
+  line-height: 110%;
   font-size: 30px;
   text-align: center;
   text-transform: uppercase;
