--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -6,6 +6,13 @@
 }
 
 @font-face {
+  font-family: Oswald;
+  src: url(Oswald-regular.woff2) format('woff2'), url(Oswald-regular.woff) format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'Fira Sans Condensed';
   src: url(FiraSansCondensed-Regular.woff2) format('woff2'), url(FiraSansCondensed-Regular.woff) format('woff');
   font-weight: 400;
